addons/onion-skinning/style.css
.sa-onion-controls-container {
  display: flex;
  flex-direction: row;
  height: calc(1.95rem + 2px);
}

.sa-onion-button {
  position: relative;
}
.sa-onion-button:focus-within {
  background-color: hsla(215, 100%, 65%, 0.2);
}
.sa-onion-button[data-enabled="true"] {
  background-color: #4c97ff;
}

.sa-onion-settings {
  position: absolute;
  bottom: 0;
  right: 16px;
  /* based on the styles for the color dropdown */
  padding: 4px;
  border-radius: 4px;
  border: 1px solid #ddd;
  box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.3);
  transition-property: bottom, opacity;
  transition-duration: 500ms;
  transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
  opacity: 0;
  pointer-events: none;
  background: white;
  color: black;
}
.sa-onion-settings[data-visible="true"] {
  bottom: 16px;
  pointer-events: auto;
  opacity: 1;
}
[dir="rtl"] .sa-onion-settings {
  right: initial;
  left: 24px;
}

.sa-onion-settings-line {
  display: flex;
  justify-content: flex-end;
  align-items: baseline;
}

.sa-onion-settings-input {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  text-align: center;
  border: 0;
  background: transparent;
  -moz-appearance: textfield;
  border: 0;
  outline: 0;
}

.sa-onion-settings-input::-webkit-outer-spin-button,
.sa-onion-settings-input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.sa-onion-settings-tip {
  position: absolute;
  bottom: 0;
  transform: translateY(100%);
  right: 101px;
}
[dir="rtl"] .sa-onion-settings-tip {
  right: 118px;
}
.sa-onion-settings-polygon {
  fill: white;
  stroke: #ddd;
}

[theme="dark"] .sa-onion-image[data-image="settings"] {
  filter: invert(1);
}

